--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "proxy":"https://localhost:3000",
+  "proxy":"https://localhost:3010/",
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
