--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "proxy":"http://localhost:3010/",
+  "proxy": "http://localhost:3010/",
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-data-table-component": "^7.6.2",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
